[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashbeaf"
version = "1.0.0"
authors = [
  { name="Cedric Nugteren", email="web@cedricnugteren.nl" },
]
description = "A simple utility to create user-specified git commit hashes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
hashbeaf = "hashbeaf.hashbeaf:cli_main"
hb = "hashbeaf.hashbeaf:cli_main"

[project.urls]
"Homepage" = "https://github.com/cnugteren/hashbeaf"
"Bug Tracker" = "https://github.com/cnugteren/hashbeaf/issues"

[tool.black]
line-length = 100

[tool.pytype]
inputs = ["src", "tests"]